======================================================================================================================

15 Jan 2022
======================================================================================================================
AllOverIt.AspNetCore v1.2.0
  * Built against AllOverIt v2.4.0
  * Renamed EnrichedEnumConverter to EnrichedEnumJsonConverter
  * ValueArrayModelBinder<T> now supports arrays of EnrichedEnum on query strings (thanks to EnrichedEnumTypeConverter
    in AllOverIt v2.4.0)
  * Minor tweaks


15 Jan 2022
======================================================================================================================
AllOverIt v2.4.0
  * Added EnrichedEnumTypeConverter. Allows integer / string values to be converted via As<TEnrichedEnum>().


11 Jan 2022
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync v1.2.2
  * Updated to Amazon.CDK.AWS.AppSync v1.138.2
  * Built against AllOverIt v2.3.0


13 Dec 2021 
======================================================================================================================
AllOverIt.Aws.AppSync.Client v1.3.0
  * Added HasExecutionTimeoutError() extension method
  * Updated to AllOverIt v2.3.0


13 Dec 2021 
======================================================================================================================
AllOverIt v2.3.0
  * Added IEnumerable and IAsyncEnumerable overloads of WithIndex(), WithIndexAsync(), ForEach(), and ForEachAsync()
    that iterate a sequence and provide each element's index.


11 Dec 2021 
======================================================================================================================
AllOverIt.Serialization.NewtonsoftJson v1.2.1
  * Updated AddInterfaceConverter() default behaviour to not include an enumerable interface converter
  * Updated DeserializeObjectAsync() to cancel if the CancellationToken is cancelled